--- a/styles/style.css
+++ b/styles/style.css
@@ -9,11 +9,67 @@
     font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+
+
 .header {
     height: 100vh;
     min-height: 600px;
     max-height: 756px;
+    background: #f2f2f2;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     /* выше установили ограничения для секции */
+}
+
+.header__title {
+    font-size: 102px;
+    font-weight: 600;
+    line-height: 96px;
+    width: 730px;
+    margin: auto 0 auto 64px;
+}
+
+.header__subtitle {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25px;
+    width: 388px;
+    position: absolute;
+    bottom: 30px;
+    left: 64px;
+    z-index: 3;
+}
+
+.header__link {
+    text-decoration: none;
+    color: #2d80ed;
+}
+
+.header__main-illustration {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 765px;
+    z-index: 2;
+}
+
+.header__square-pic {
+    width: 568px;
+    height: 568px;
+    background: #2d80ed;
+    position: absolute;
+    top: 64px;
+    right: 0;
+    z-index: 1;
+
+}
+
+.logo__place_header {
+    position: absolute;
+    top: 30px;
+    left: 64px;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
