--- a/styles/style.css
+++ b/styles/style.css
@@ -55,19 +55,12 @@
     z-index: 2;
 }
 
-.header__square-pic {
-    width: 568px;
-    height: 568px;
-    background: #2d80ed;
+.logo {
     position: absolute;
-    top: 64px;
-    right: 0;
-    z-index: 1;
-
 }
 
+
 .logo__place_header {
-    position: absolute;
     top: 30px;
     left: 64px;
 }
@@ -76,12 +69,248 @@
 .header__square-pic {
     height: 568px;
     width: 568px;
+    background: #2d80ed;
+    position: absolute;
+    top: 64px;
+    right: 0;
+    z-index: 1;
+}
+
+
+
+
+/* второй блок */
+
+
+.description {
+    display: flex;
+    margin: 100px 0;
+}
+
+ .two-columns {
+    display: flex;
+    width: 80%;
+    margin: auto;
+    justify-content: space-between;
+ }
+
+ .two-columns__brief {
+    width: 175px;
+    color: #2d80ed;
+    line-height: 1.2em;
+    font-size: 18px;
+ }
+
+.two-columns__main-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 80%;
+    min-width: 784px;
+}
+
+.two-columns__paragraph {
+    line-height: 34px;
+    font-size: 24px;
+}
+
+.two-columns__paragraph:not(:last-of-type) {
+    margin: 0 0 30px 0;    
+}
+
+.two-columns__span-accent {
+    font-weight: 600;
+}
+
+/* третий блок */
+
+.digits {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 0 100px 0;
+}
+
+.section__title {
+    margin: auto auto 20px auto;
+    width: 60%;
+    text-align: center;
+    font-size: 60px;
+    line-height: 69px;
+    font-weight: 600;
+}
+
+.section__subtitle {
+    margin: auto;
+    width: 60%;
+    line-height: 34px;
+    font-size: 24px;
+    font-weight: 400;
+    text-align: center;
+}
+.table {
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    width: 1100px;
+    justify-content: space-between;
+    z-index: 2;
+}
+
+.table__cell {
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 60px 0 0 0;
+}
+
+.table__heading {
+    line-height: 1.15em;
+    font-size: 24px;
+    font-weight: 600;
+    margin: 0;
+}
+
+.table__text {
+    line-height: 1.2em;
+    font-size: 18px;
+    margin: 20px 0 0 0;
+}
+
+/* четвертый блок */
+
+.feinman {
+    background: #f2f2f2 url(../images/feinman.png) bottom left no-repeat;
+    position: relative;
+    height: 790px;
+    padding: 100px 0 0 0;
+}
+
+.feinman__title {
+    margin: 0 auto;
+    width: 648px;
+    font-size: 120px;
+    line-height: 1.15em;
+    font-weight: 600;
+    text-align: center;
+}
+
+.feinman__subtitle {
+    margin: 70px 0 0 0;
+    line-height: 51px;
+    font-size: 36px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.feinman__link {
+    position: absolute;
+    top: 50%;
+    right: 48px;
+    text-decoration: none;
+    color: #000;
+    font-size: 36px;
+    line-height: 51px;
+    font-weight: 400;
+}
+
+
+/* пятый блок */
+
+
+.kaufman {
+    background: #1f1f1f;
+    padding: 90px 0;
+    position: relative;
+    overflow: hidden;
+}
+
+.section__title_theme_dark, .section__subtitle_theme_dark {
+    color: #fff;
 }
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
     width: 200px;
     color: white;
-    margin-right: 0;
-    margin-top: 80px;
+    margin: 80px 0 0 0;
+    z-index: 2;
+}
+
+
+.kaufman__triangle {
+    position: absolute;
+    right: -210px;
+    top: 0;
+    z-index: 1;
+
+}
+
+
+/* шестой блок */
+
+.footer {
+    padding: 60px 0 40px 0;
+    color: #fff;
+    background: #1f1f1f;
+    min-height: 350px;
+}
+
+.footer__columns {
+    display: flex;
+    justify-content: space-between;
+    flex-basis: 711px;
+    width: 90%;
+    margin: auto;
+    position: relative;
+}
+
+.footer__column_content_copyright {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.footer__author {
+    margin: 18px 0; 
+    font-size: 18px;
+    line-height: 25px;
+}
+
+.footer__column_content_info {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__column_content_social {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__column-heading {
+    margin: 0 0 20px 0;
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: 600;
+}   
+
+.footer__column-link {
+    text-decoration: none;
+    color: #fff;
+    margin: 0 0 16px 0;
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: 400;
+
+}
+
+
+.logo__place_footer {
+    top: 0;
+    left: 0;
+}
+
+.footer__social-icon {
+    width: 16px;
 }
